<resources>
    <string name="app_name">SPSA Afghanistan</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="btnSync">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="splashText"> </string>
    <string name="splashText2">  </string>
    <string name="check_pending_forms">CHECK PENDING FORMS</string>
    <string name="open_new_form"> OPEN NEW FORM </string>
    <string name="openScreening"> Screening </string>
    <string name="openPretest"> Pre Test Knowlegde </string>
    <string name="openFollowup"> Follow Up </string>
    <string name="records_summary">Records Summary</string>
    <string name="main_menu">Main Menu</string>
    <string name="only_for_testing">ONLY FOR TESTING</string>
    <string name="database">Database</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="no"> نہیں </string>
    <string name="dkn"> معلوم نہیں </string>
    <string name="none"> کوئی نہیں </string>
    <string name="never"> کبھی نہیں </string>
    <string name="na"> قابل اطلاق / دستیاب نہیں  </string>
    <string name="nap"> قابل اطلاق نہیں </string>
    <string name="nav"> دستیاب نہیں </string>
    <string name="ref"> انکار کر دیا </string>
    <string name="other"> دیگر </string>
    <string name="specify"> وضاحت کریں </string>
    <string name="year"> سال </string>
    <string name="month"> مہینہ </string>
    <string name="weeks"> ہفتے </string>
    <string name="days"> دن </string>
    <string name="hours"> گھنٹے </string>
    <string name="minutes"> منٹ </string>
    <string name="kg"> کلوگرام </string>
    <string name="km"> کلومیٹر </string>
    <string name="cm"> سینٹی میٹر </string>
    <string name="in"> انچ </string>
    <string name="rupees"> روپے </string>
    <string name="num"> اعداد </string>
    <string name="name"> نام </string>
    <string name="contactnum"> رابطہ نمبر </string>
    <string name="checkHHpresent"> گھر کے سربراہ کا نام لائن لسٹنگ ڈیٹا سے مطابقت رکھتا ہے۔ </string>
    <string name="istatus"> انٽرويو جو نتيجو </string>
    <string name="istatusa"> مڪمل ٿيو </string>
    <string name="istatusb"> نامڪمل </string>
    <string name="istatusc"> انڪار ڪري ڇڏيو </string>
    <string name="istatus96"> ٻيو ڪجھ </string>
    <string name="istatus96x"> وضاحت ڪريو </string>
    <string name="sec1heading"> بنيادي معلومات: </string>
    <string name="sec2heading"> علامتون: </string>
    <string name="sec5heading"> تعلقو صحت ڪوارٽر پوئواري فارم </string>
    <string name="a06"> گھرانے کے انٹرویوکا نتیجہ: نوٹ: انٹرویو مکمل نہ ہونے کی صورت میں سپروائزر سے رابطہ کریں۔</string>
    <string name="a06_info"> انٹرویو مکمل نہ ہونے  کی صورت میں سپروائزر سے رابطہ کریں ۔ </string>
    <string name="a0601">مکمل</string>
    <string name="a0602">فرد کی شناخت نہیں ہو سکی</string>
    <string name="a0603">گھر کی شناخت نہیں ہو سکی </string>
    <string name="a0604">گھر بند ہے</string>
    <string name="a0605">گھر میں کوئی اہل جواب دہندہ موجود نہیں</string>
    <string name="a0606">گھر طویل مدت سے بند ہے</string>
    <string name="a0607">انکار کردیا </string>
    <string name="a0696">دیگر(وضاحت کریں)</string>
    <string name="Q_a06">A06</string>
    <string name="a01">انٹرویو کی تاریخ</string>
    <string name="a02">انٹرویو شروع کرنے کا وقت(24 گھنٹوں میں)</string>
    <string name="a03">انٹرویو لینے والے کا کوڈ</string>
    <string name="a04">صوبہ؟</string>
    <string name="a0401">خیبر پختونخوا </string>
    <string name="a0402">پنجاب</string>
    <string name="a0403">سندھ</string>
    <string name="a0404">بلوچستان</string>
    <string name="a0405">آزاد جموں کشمیر </string>
    <string name="a0406">گلگت بلتستان </string>
    <string name="a05">ضلع؟</string>
    <string name="a05a">فرد کی شناختی  آئی ڈی</string>
    <string name="a05b">کیا گھر اور فرد کی شناخت ہو گئی</string>
    <string name="a05b1">ہاں</string>
    <string name="a05b2">نہیں</string>
    <string name="a07">کیا میں انٹرویو شروع کر سکتا /سکتی ہوں؟</string>
    <string name="a0701">ہاں</string>
    <string name="a0702">نہیں</string>
    <string name="a08"> پورا نام؟</string>
    <string name="a09">باپ/شوہر کا نام؟</string>
    <string name="a10">رہائشی پتہ (جنوری -2020 کے بعد سے) شہر / گاؤں کے ساتھ؟</string>
    <string name="a11">رابطہ نمبر؟</string>
    <string name="a12">رہائشی علائقہ؟</string>
    <string name="a1201">شہری </string>
    <string name="a1202">دیہی</string>
    <string name="a13">آپ کی تاریخ پیدائش کیا ہے؟</string>
    <string name="a13dd">دن</string>
    <string name="a13mm">مہینہ</string>
    <string name="a13yy">سال</string>
    <string name="a14">آپ کی عمر کتنی ہے؟</string>
    <string name="a14mm">مہینہ</string>
    <string name="a14yy">سال</string>
    <string name="a15">آپ کی جنس کیا ہے؟</string>
    <string name="a1501">مرد(لڑکا) </string>
    <string name="a1502">عورت(لڑکی) </string>
    <string name="a1503">تیسری جنس </string>
    <string name="a16">آپ کون سی قومیت سے تعلق رکھتے ہیں؟</string>
    <string name="a1601">سندھی</string>
    <string name="a1602">اردو</string>
    <string name="a1603">پنجابی</string>
    <string name="a1604">بلوچ/براہوی</string>
    <string name="a1605">پشتون</string>
    <string name="a1606">سرائیکی </string>
    <string name="a1607">کشمیری</string>
    <string name="a1608">ہزارہ </string>
    <string name="a1609">برشو</string>
    <string name="a16096">دیگر(وضاحت کریں) </string>
    <string name="a17">آپ کی ذات کیا ہے؟</string>
    <string name="a18">آپ کس مذہب کے پیروکارہیں؟</string>
    <string name="a1801">مسلمان </string>
    <string name="a1802">عیسائی </string>
    <string name="a1803">ہندو </string>
    <string name="a1804">سکھ </string>
    <string name="a18096">دیگر(وضاحت کریں)</string>
    <string name="a19">آپ کی زیادہ سے زیادہ تعلیم کیا ہے؟</string>
    <string name="a1901">کوئی تعلیم نہیں </string>
    <string name="a1902">صرف قرآنی تعلیم </string>
    <string name="a1903">پرائمری اسکول (1-4 سال) </string>
    <string name="a1904">پرائمری اسکول (5 سال) مکمل </string>
    <string name="a1905">سیکنڈری اسکول (6-9 سال) </string>
    <string name="a1906">سیکنڈری اسکول (10 سال) مکمل </string>
    <string name="a1907">ہائی اسکول (11-12 سال) </string>
    <string name="a1908">بیچلر ڈگری (14 سال) </string>
    <string name="a1909">ماسٹرزڈگری (16 سال) </string>
    <string name="a1910">پی ایچ ڈی </string>
    <string name="a1911">تکنیکی تعلیم </string>
    <string name="a19096">دیگر(وضاحت کریں</string>
    <string name="a20">آپ کی ازدواجی حیثیت کیا ہے؟</string>
    <string name="a2001">غیرشادی شدہ </string>
    <string name="a2002">شادی شدہ </string>
    <string name="a2003">طلاق یافتہ </string>
    <string name="a2004">الگ ہونا </string>
    <string name="a2005">بیوہ/رنڈوا</string>
    <string name="a21"> آپ کا بنیادی پیشہ تجارت کونسا ہے؟</string>
    <string name="a2101">پیشہ ور (اکاؤنٹنٹ، انجینئر، ڈاکٹر) </string>
    <string name="a2102">انتظامی اور تکنیکی/انٹرمیڈیٹ مارکیٹنگ اور سیلز مینیجرز، اساتذہ، صحافی، نرسیں) </string>
    <string name="a2103">غیر دستی ہنر مند (کلرکس ، دکان کے معاونین ، کیشیئر) </string>
    <string name="a2104">دستی ہنر مند (ترخان، ڈرائیور، باورچی) </string>
    <string name="a2105">جزوی طور پر ہنرمند (سیکیورٹی گارڈز، مشین آپریٹرز، کسان) </string>
    <string name="a2106">غیر ہنر مند (مزدور، کلینر) </string>
    <string name="a2107">طالب علم </string>
    <string name="a2108">بے روزگار </string>
    <string name="a2109">گھریلو خاتون </string>
    <string name="a2110">پری اسکول </string>
    <string name="a2111">چائلڈ لیبر(15 سال سے کم کام کرنے والا بچہ) </string>
    <string name="a21096">دیگر(وضاحت کریں</string>
    <string name="a22">آپ کا مخصوص پیشہ(پوزیشن، عہدہ اور تنظیم کے نام سمیت) کیا ہے؟</string>
    <string name="a22pos">عہدہ</string>
    <string name="a22org">ادارے کا نام </string>
    <string name="a23">کیا آپ جنوری 2020 کے بعد جیل میں یا قانون نافذ کرنے والے اداروں کی تحویل میں رہے ہیں؟</string>
    <string name="a2301">ہاں</string>
    <string name="a2302">نہیں</string>
    <string name="section2socioeconomicstatus_mainheading">Section 2. Socio-Economic Status : SocioEconomic Status </string>
    <string name="section3handwashing_mainheading">Section 3: HAND-WASHING : HANDWASHING </string>
    <string name="section4exposuretointerventions_mainheading">Section 4: Exposure to Interventions: Exposure to Interventions</string>
    <string name="section5householdfoodinsecurityaccessscalehfias_mainheading">Section 5: Household Food Insecurity Access Scale (HFIAS) : Household Food Insecurity Access Scale (HFIAS) </string>
    <string name="section6anthropometryandhbofpregnantandlactatingwomenplw_mainheading">Section 6: Anthropometry and Hb of pregnant and lactating women (PLW) : Anthropometry and Hb of pregnant and lactating women (PLW) </string>
    <string name="section7minimumdietarydiversityforpregnantandlactatingwomanplw_mainheading">Section 7: Minimum Dietary Diversity for Pregnant and Lactating Woman (PLW): Minimum Dietary Diversity for Pregnant and Lactating Woman (PLW)</string>
    <string name="section8antenatalandpostnatalcareforplw_mainheading">Section 8: Antenatal and Postnatal Care for PLW : Antenatal and Postnatal Care for PLW </string>
    <string name="section9childanthropometryhemoglobin_mainheading">Section 9: Child Anthropometry &amp; Hemoglobin: Child Anthropometry &amp; Hemoglobin</string>
    <string name="section10initiationofbreastfeeding_mainheading">Section 10: Initiation of Breastfeeding     : Initiation of Breastfeeding     </string>
    <string name="section11infantyoungchildfeedingiycfpractices_mainheading">Section 11: Infant &amp; Young Child Feeding (IYCF) Practices : Infant &amp; Young Child Feeding (IYCF) Practices </string>
    <string name="section12childimmunizationmorbidityandcareseeking_mainheading">Section 12: Child Immunization, Morbidity and Care Seeking: Child Immunization, Morbidity and Care Seeking</string>
    <string name="section13knowledgeaboutiycf_mainheading">Section 13: Knowledge about IYCF   : Knowledge about IYCF   </string>
    <string name="section1generalinformation_mainheading">Section 1: General Information : Section 1: General Information </string>
    <string name="newHHheadname"> Name of new head of the household </string>
    <string name="s2q1">What is your mother tongue?</string>
    <string name="s2q101">Dari</string>
    <string name="s2q102">Persian</string>
    <string name="s2q103">Pashto </string>
    <string name="s2q104">Shughni</string>
    <string name="s2q105">Tajiki</string>
    <string name="s2q106">Wakhi</string>
    <string name="s2q107">Uzbaki</string>
    <string name="s2q196">Other (Specify) </string>
    <string name="s2q2">What is ownership status of household? </string>
    <string name="s2q201">Own </string>
    <string name="s2q202">Rented</string>
    <string name="s9title">Child Anthropometry &amp; Hemoglobin: </string>
    <string name="s9q1">Name of child?</string>
    <string name="s9q2">Age of child?  months </string>
    <string name="s9q3">Gender of child?</string>
    <string name="s9q301">Male</string>
    <string name="s9q302">Female</string>
    <string name="s9q4">Length</string>
    <string name="s9q401">Measurer-1 Code Length</string>
    <string name="s9q402">Measurer-2 Code: Length</string>
    <string name="s9q5">Weight</string>
    <string name="s9q501">Measurer-1 Code Weight</string>
    <string name="s9q502">Measurer-2 Code: Weight</string>
    <string name="s9q6">Measurer-1 Code: Hb resulte</string>
</resources>