<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="form"
            type="edu.aku.hassannaqvi.spsa_afg.models.Form" />

        <variable
            name="callback"
            type="edu.aku.hassannaqvi.spsa_afg.ui.sections.Section09Activity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/GrpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- s9title  Title   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVs9title"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/qtxt_s9title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/s9title" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- s9q1  Input   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVs9q1"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom">

                        <TextView
                            android:id="@+id/qtxt_s9q1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_s9q1"
                            android:text="@string/s9q1" />

                        <TextView
                            android:id="@+id/q_s9q1"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_s9q1"
                            android:layout_alignBottom="@id/qtxt_s9q1"
                            android:text="@string/Q_s9q1" />
                    </RelativeLayout>

                    <EditText
                        android:id="@+id/s9q1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/s9q1" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- s9q2  Input-Numeric   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVs9q2"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom">

                        <TextView
                            android:id="@+id/qtxt_s9q2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_s9q2"
                            android:text="@string/s9q2" />

                        <TextView
                            android:id="@+id/q_s9q2"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_s9q2"
                            android:layout_alignBottom="@id/qtxt_s9q2"
                            android:text="@string/Q_s9q2" />
                    </RelativeLayout>

                    <com.edittextpicker.aliazaz.EditTextPicker
                        android:id="@+id/s9q2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/s9q2"
                        android:inputType="number"
                        android:maxLength="2"
                        app:maxValue="23"
                        app:minValue="5"
                        app:type="range" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- s9q3  Radio   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVs9q3"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom">

                        <TextView
                            android:id="@+id/qtxt_s9q3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_s9q3"
                            android:text="@string/s9q3" />

                        <TextView
                            android:id="@+id/q_s9q3"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_s9q3"
                            android:layout_alignBottom="@id/qtxt_s9q3"
                            android:text="@string/Q_s9q3" />
                    </RelativeLayout>

                    <RadioGroup
                        android:id="@+id/s9q3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/s9q301"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/s9q301" />

                        <RadioButton
                            android:id="@+id/s9q302"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/s9q302" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- s9q4  Title   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVs9q4"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/qtxt_s9q4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/s9q4" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/s9q401" />

                    <com.edittextpicker.aliazaz.EditTextPicker
                        android:id="@+id/s9q401"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/s9q401"
                        android:inputType="number"
                        android:maxLength="3"
                        app:maxValue="140"
                        app:minValue="60"
                        app:type="range" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/s9q402" />

                    <com.edittextpicker.aliazaz.EditTextPicker
                        android:id="@+id/s9q402"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/s9q402"
                        android:inputType="number"
                        android:maxLength="3"
                        app:maxValue="140"
                        app:minValue="60"
                        app:type="range" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- s9q5  Title   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVs9q5"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/qtxt_s9q5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/s9q5" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/s9q501" />

                    <com.edittextpicker.aliazaz.EditTextPicker
                        android:id="@+id/s9q501"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/s9q501"
                        android:inputType="number"
                        android:maxLength="2"
                        app:maxValue="30"
                        app:minValue="5"
                        app:type="range" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/s9q502" />

                    <com.edittextpicker.aliazaz.EditTextPicker
                        android:id="@+id/s9q502"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/s9q502"
                        android:inputType="number"
                        android:maxLength="2"
                        app:maxValue="30"
                        app:minValue="5"
                        app:type="range" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- s9q6  Input-Numeric   -->
            <androidx.cardview.widget.CardView
                android:id="@+id/fldGrpCVs9q6"
                style="@style/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bottom">

                        <TextView
                            android:id="@+id/qtxt_s9q6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/q_s9q6"
                            android:text="@string/s9q6" />

                        <TextView
                            android:id="@+id/q_s9q6"
                            style="@style/quesNum"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignTop="@id/qtxt_s9q6"
                            android:layout_alignBottom="@id/qtxt_s9q6"
                            android:text="@string/Q_s9q6" />
                    </RelativeLayout>

                    <com.edittextpicker.aliazaz.EditTextPicker
                        android:id="@+id/s9q6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/s9q6"
                        android:inputType="number"
                        android:maxLength="2"
                        app:maxValue="20"
                        app:minValue="7"
                        app:type="range" />
                </LinearLayout>
            </androidx.cardview.widget.CardView><!--EndButton LinearLayout-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_End"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/red_overlay"
                    android:onClick="@{() -> callback.BtnEnd()}"
                    android:text="Cancel"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_Continue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:background="@color/green_overlay"
                    android:onClick="@{() -> callback.BtnContinue()}"
                    android:text="Save"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</layout>